--- a/Frontent_Project/style.css
+++ b/Frontent_Project/style.css
@@ -51,10 +51,26 @@
     font-size: 20px;
 }
 
+.education-block {
+    display: flex;
+    width: 100%;
+    height: 40%;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    margin: 25px auto 25px;
+    /*border: solid;*/
+    background-color: #f27a5e;
+}
+
+.card-education {
+    background-color: #f2f2eb;
+}
+
 .education {
     display: flex;
     width: 80%;
-    height: 40%;
+    /*height: 40%;*/
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
@@ -81,10 +97,15 @@
     height: 200px;
     border-radius: 50px;
     background-color: #f27a5e;
-    margin: 10px;
+    margin: 20px;
     text-align: center;
     font-size: 20px;
     justify-content: center;
+    padding: 10px;
+}
+
+.card-education {
+    background-color: #f2f2eb;
 }
 
 .skills {
@@ -105,13 +126,14 @@
 
 .footer {
     display: flex;
-    width: 80%;
-    height: 20%;
+    width: 100%;
+    height: 10%;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     margin: auto;
     padding-bottom: 10px;
+    background-color: #f27a5e;
 }
 
 .footer__icon {
