--- a/Frontent_Project/style/style.css
+++ b/Frontent_Project/style/style.css
@@ -136,9 +136,13 @@
     background-color: #f27a5e;
     margin: 20px;
     text-align: center;
-    font-size: 20px;
+    
     justify-content: center;
     padding: 10px;
+}
+
+.text {
+    font-size: 20px;
 }
 
 .card-education {
@@ -159,7 +163,7 @@
 
 .card-skills {
     width: 400px;
-    height: 240px;
+    height: 280px;
     padding: 10px auto 10px;
 }
 
@@ -199,6 +203,9 @@
 }
 
 .list-olimpiads {
-    font-size: 18px;
+    max-height: 240px;
 }
 
+.text-olimp {
+    font-size: 17px;
+}
