--- a/Frontent_Project/style.css
+++ b/Frontent_Project/style.css
@@ -1,20 +1,18 @@
+@keyframes octocat-wave{
+    0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}
+}
+@media (max-width:500px){
+    .github-corner:hover .octo-arm{
+        animation:none}
+    .github-corner .octo-arm{
+        animation:octocat-wave 560ms ease-in-out}
+}
+
 @font-face {
     src: url(https://code.s3.yandex.net/web-code/fonts/PTMono-Regular.woff);
     font-family: 'PTMono';
     font-style: normal;
     font-weight: 400;
-  }
-  @font-face {
-    src: url(https://code.s3.yandex.net/web-code/fonts/Lora-Regular.woff);
-    font-family: 'Lora';
-    font-style: normal;
-    font-weight: 400;
-  }
-  @font-face {
-    src: url(https://code.s3.yandex.net/web-code/fonts/PlayfairDisplay-Bold.woff);
-    font-family: 'Playfair Display';
-    font-style: bold;
-    font-weight: 700;
   }
 
 .page {
@@ -22,32 +20,32 @@
     margin: 0;
     padding: 0;
     color: #092140;
-    font-family: 'Lora'; 
-
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    text-rendering: optimizeLegibility;
-    -webkit-text-size-adjust: 100%;
-    -ms-font-feature-settings: "kern" 1;
-    font-feature-settings: "kern";
+    font-family: 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
 }
-
 .menu {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-around; 
+    background-color: #f2f2eb; 
+    align-items: center; 
     flex-wrap: wrap;
-    width: 80%;
-    height: 10%;
-    margin: 10px auto 10px;
+    top: 0;
+    width: 100%;
+    height: 5%;
+    margin: auto;
     font-family: 'PTMono';
   }
-  
+
+  .menu-fixed {
+    position: fixed;
+    z-index: 1;
+  }
+
   .menu__link {
     font-size: 18px;
     text-decoration: none;
-    margin-right: 20px;
+    /* margin-right: 20px; */
     color: #092140;
+    
   }
 
 .short-information {
@@ -97,6 +95,7 @@
 
 .card-education {
     background-color: #f2f2eb;
+    height: 200px;
 }
 
 .education {
@@ -118,14 +117,13 @@
     justify-content: center;
     text-align: center;
     font-size: 40px;
-    font-family: 'Playfair Display';
 }
 
 .card {
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     width: 340px;
-    height: 200px;
     border-radius: 50px;
     background-color: #f27a5e;
     margin: 20px;
@@ -155,8 +153,8 @@
 
 .card-skills {
     width: 400px;
-    height: 280px;
     padding: 10px auto 10px;
+    height: auto;
 }
 
 .footer {
@@ -181,6 +179,310 @@
 }
 
 .result {
-    text-align: left;
+    font-size: 25px;
+    text-align: center;
     padding-left: 25px;
+    margin-bottom: 0;
+    padding-bottom: 0;
+}
+
+
+.skills-all {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: stretch;
+}
+
+
+.picture {
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+
+.picture__list {
+    display: flex;
+    justify-content: space-between;
+}
+
+.picture__image {
+    margin: 0;
+    padding: 0;
+    max-width: 80%;
+    position: relative;
+    box-sizing: border-box;
+}
+
+
+.picture__card {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    overflow: hidden;
+    transition: 0.3s; 
+}
+
+
+.picture__card:active {
+    scale: 0.9;
+}
+
+
+.popup {
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    visibility: hidden;
+    opacity: 0;
+    transition: 1s;
+}
+
+
+.popup__image {
+    width: 100%;
+}
+
+
+.popup__block {
+    margin: 0;
+    padding: 34px 36px 37px;
+    width: 430px;
+    position: relative;
+    z-index: 1;
+    box-sizing: border-box;
+    background: white;
+    transition: 0.3s;
+}
+
+.popup__block_gallery {
+    padding: 0;
+    background: transparent;
+}
+
+.popup__block_opened {
+    scale: 1;
+}
+
+
+.popup__close {
+    width: 25px;
+    height: 25px;
+    position: absolute;
+    right: -30px;
+    background:  url(image/close.svg) no-repeat center;
+    border: none;
+}
+
+.popup__close:hover {
+    opacity: 0.7;
+}
+
+
+.popup__next-button {
+    margin: 0;
+    padding: 0;
+    width: 32px;
+    height: 32px;
+    position: absolute;
+    top: 44%;
+    right: 5px;
+    background: transparent url(image/right.svg) no-repeat center;
+    scale: 2;
+    border: none;
+}
+
+.popup__next-button:hover {
+    opacity: 0.7;
+}
+
+
+.popup__next-button_inactive {
+    visibility: hidden;
+}
+
+.popup__prev-button {
+    margin: 0;
+    padding: 0;
+    width: 32px;
+    height: 32px;
+    position: absolute;
+    top: 44%;
+    right: 91%;
+    background: transparent url(image/left.svg) no-repeat center;
+    scale: 2;
+    border: none;
+}
+
+.popup__prev-button:hover {
+    opacity: 0.7;
+}
+
+.popup__prev-button_inactive {
+    visibility: hidden;
+}
+
+.popup_opened {
+    opacity: 1;
+    scale: 1;
+    background: rgba(0, 0, 0, 0.5);
+    visibility: visible;
+}
+
+.footer__text {
+    font-size: 24px;
+}
+
+.footer__text:active{
+    scale: 0.9;
+}
+
+.popup__save {
+    margin: 23px 0 0;
+    padding: 0;
+    width: 100%;
+    height: 50px;
+    background-color: black;
+    background-position: center;
+    color: #f2f2eb;
+    border: none;
+    font-weight: 400;
+    font-size: 18px;
+    transition: 0.3s;
+}
+
+
+
+.popup__save_inactive {
+    opacity: 0.4;
+}
+
+.popup__error {
+    margin: 0 0 15px;
+    font-weight: 400;
+    font-size: 14px;
+    color: #f27a5e;
+    transition: 0.3s;
+}
+
+.popup__error_inactive {
+    opacity: 0;
+    visibility: hidden;
+}
+
+.popup__input {
+    margin: 13px 0 0;
+    padding: 0 0 8px;
+    width: 100%;
+    border: none;
+    border-bottom: 1px solid #092140;
+    font-weight: 400;
+    font-size: 14px;
+    transition: 0.3s;
+}
+
+.popup__input:focus {
+    border-bottom: 1px solid #092140;
+}
+
+.popup__input_error {
+    border-bottom: 1px solid #f27a5e;
+}
+
+.popup__input_error:focus {
+    border-bottom: 1px solid #f27a5e;
+}
+
+.popup__field {
+    margin: 0;
+    padding: 0;
+    border: none;
+}
+
+.popup__title {
+    margin: 0 0 40px;
+    padding: 0;
+    font-weight: 900;
+    font-size: 24px;
+}
+
+.popup__block-time{
+    display: flex;
+    justify-content: space-between;
+    padding: 0;
+    margin: 0;
+}
+
+
+.popup__text-cat {
+    font-weight: normal;
+    font-size: 24px;
+}
+
+.popup__close-second {
+    width: 25px;
+    height: 25px;
+    position: absolute;
+    top: 0;
+    right: -30px;
+    background:  url(image/close.svg) no-repeat center;
+    border: none;
+
+}
+
+.popup__close-second:hover {
+    opacity: 0.7;
+}
+
+.timer {
+    font-size: 25px;
+    font-weight: bold; 
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 80%;
+    border-radius: 50px;
+    background-color: #f27a5e;
+    margin: 20px;
+    text-align: center;
+    justify-content: center;
+    padding: 10px;
+}
+
+.loading{
+    background-color: rgb(109, 93, 0);
+}
+
+.success {
+    background-color: rgb(0, 100, 63);
+}
+
+.failure {
+    background-color: #f27a5e;
+}
+
+.main-timer {
+    display: flex;
+    justify-content: space-around;
+}
+
+.timer-text {
+    margin: 0;
+    padding: 0;
+}
+
+.github-corner:hover .octo-arm {
+    animation:octocat-wave 560ms ease-in-out}
+
+
+.menu-text {
+    margin: 10px;
 }
